Fix spacing

--- a/frontend/src/components/ResultPage/ResultPage.module.css
+++ b/frontend/src/components/ResultPage/ResultPage.module.css
@@ -56,8 +56,6 @@
 }
 
 .sectionRow {
-  position: sticky;
-  top: 5rem;
   margin: 2rem 0;
   display: flex;
   gap: 3rem;
@@ -81,6 +79,6 @@
 
 .relatedMaterial {
   border-top: 1px solid #b6b6b6;
-  margin: 5rem 0;
-  padding: 2rem 0;
+  margin-top: 3rem;
+  padding-top: 1rem;
 }
